fdo#66682 RTF export: fix level text of SVX_NUM_ARABIC

Even if level text is not ASCII, we should just write the placeholder
values (0x00, 0x01, etc.) in a hex encoded form, without Unicode.
Regression from 07d01742c69f1c0335bc7e1b57abd8341ce255e7.

Also, fix the import side, so the previous bad output now looks bad in
Writer as well.

Change-Id: I2f93892006c07eec243ec7dfcb23372d243a2db4