writerfilter/source/rtftok/rtfdocumentimpl.cxx
@@ -1713,6 +1713,8 @@ int RTFDocumentImpl::dispatchSymbol(RTFKeyword nKeyword)
 {
     if (nKeyword != RTF_HEXCHAR)
         checkUnicode(/*bUnicode =*/ true, /*bHex =*/ true);
+    else
+        checkUnicode(/*bUnicode =*/ true, /*bHex =*/ false);
     setNeedSect();
     RTFSkipDestination aSkip(*this);
 
@@ -3111,7 +3113,8 @@ int RTFDocumentImpl::dispatchValue(RTFKeyword nKeyword, int nParam)
             if ((SAL_MIN_INT16 <= nParam) && (nParam <= SAL_MAX_UINT16))
             {
                 m_aUnicodeBuffer.append(static_cast<sal_Unicode>(nParam));
-                m_aStates.top().nCharsToSkip = m_aStates.top().nUc;
+                if (m_aStates.top().nDestinationState != DESTINATION_LEVELTEXT)
+                    m_aStates.top().nCharsToSkip = m_aStates.top().nUc;
             }
             break;
         case RTF_LEVELFOLLOW:
